apps/infrastructure/configs/databases/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: databases
  labels:
    name: databases
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
